# algorythm-c

./: CMakeLists.txt
src/: CMakeLists.txt  ble.c  noise.c  web_server.cpp
static_html/: index.html
static_html/js/: app.js
